<resources>
    <string name="app_name">Bx Connect</string>
    <string name="no_data">No data found</string>
    <string name="no_data_option">-</string>
    <string name="dialog_title_error">Oops something went wrong!</string>
    <string name="dialog_message_loading">Loading&#8230;</string>
    <string name="dialog_confirmation_logout">Are you sure you want to logout?</string>
    <string name="dialog_option_positive">Yes</string>
    <string name="dialog_option_negative">No</string>
    <string name="dialog_option_confirm">Got it!</string>
    <string name="dialog_confirmation_exit">Are you sure you want to exit?</string>
    <string name="error_incorrect_fields">Make sure the fields are filled correctly</string>
    <string name="error_facebook">Can\'t connect with Facebook Service</string>
    <string name="error_twitter">Can\'t connect with Twitter Service</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_skype_id">Skype Id</string>
    <string name="hint_keyword">Select a Tag</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_repeat_new_password">Repeat New Password</string>
    <string name="hint_write_comment">Write a comment</string>
    <string name="hint_write_tag">Select a Tag</string>
    <string name="button_log_in">Log In</string>
    <string name="button_log_in_as_guest">Log In As Guest</string>
    <string name="button_create_account">Create New Account</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_request_new_password">Request new password</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_continue_twitter_login">Continue</string>
    <string name="button_facebook">Login with Facebook</string>
    <string name="button_twitter">Login with Twitter</string>
    <string name="button_privacy_policy">Privacy Policy</string>
    <string name="button_share">Share</string>
    <string name="title_reset_password_activity">Reset Password</string>
    <string name="title_select_category">Select Category</string>
    <string name="title_select_subcategory">Select Subcategory</string>
    <string name="title_account_activity">Profile</string>
    <string name="title_recommendations_activity">Recommendations</string>
    <string name="title_expand_photo_activity"></string>
    <string name="title_main">Belatrix Connect</string>
    <string name="title_contact_activity">Select an user</string>
    <string name="title_recommendation_activity">Recommendations</string>
    <string name="title_give_star_activity">Give a recommendation</string>
    <string name="title_comment_activity">Write a comment</string>
    <string name="title_keywords_activity">Select a Tag</string>
    <string name="title_keyword">Tag</string>
    <string name="title_contacts_keyword_activity">Tag Top</string>
    <string name="title_keyword_top">%s Top</string>
    <string name="title_edit_profile_activity">Edit Profile</string>
    <string name="title_event_list_activity">Events</string>
    <string name="title_event_detail_activity">Event Detail</string>
    <string name="title_about_activity">About</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_notification_list_activity">Activities</string>
    <string name="title_help_activity">Help</string>
    <string name="title_give_star">Kudos</string>
    <string name="title_select_action">Select an action</string>
    <string name="title_write_tag">Select a Tag</string>
    <string name="tab_account_title">Profile</string>
    <string name="tab_events_title">Events</string>
    <string name="tab_contacts_title">Contacts</string>
    <string name="tab_ranking_title">Ranking</string>
    <string name="login_subtitle">Belatrix Connect</string>
    <string name="sign_up_subtitle">Let\'s get started</string>
    <string name="sign_up_description">Enter your email address to receive your temporary password.</string>
    <string name="sign_up_invalid_mail">Email entered is not valid.</string>
    <string name="log_in_as_guest_subtitle">Log In as Guest</string>
    <string name="log_in_as_guest_description">Use your favorite social network account to login as guest.</string>
    <string name="get_guest_email_subtitle">Almost done!</string>
    <string name="get_guest_email_description">We couldn\'t get your email from your social network account. Enter your email to start using the app!</string>
    <string name="request_new_password_subtitle">New password</string>
    <string name="request_new_password_description">Enter your email address to request your new password.</string>
    <string name="reset_password_subtitle">Secure you account</string>
    <string name="reset_password_description">Change your password, so you can remember it.</string>
    <string name="new_password_length_error">At least %s characters</string>
    <string name="new_password_repeat_error">Must be the same</string>
    <string name="bottom_navigation_color">#448AFF</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_activities">Activities</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_about">About</string>
    <string name="menu_title_help">Tutorial</string>
    <string name="menu_title_logout">Logout</string>
    <string name="title_full_name">Full Name</string>
    <string name="title_current_month_score">Month score</string>
    <string name="title_score">Score</string>
    <string name="title_level">Level</string>
    <string name="empty_error">Field must not be empty</string>
    <string name="edit_profile">Edit</string>
    <string name="location_head">Location:</string>
    <string name="photo_option">Take a photo</string>
    <string name="gallery_option">Pick from gallery</string>
    <string name="select_photo_title">Upload a picture</string>
    <string name="select_image_title">Select an image</string>
    <string name="permission_profile">The application needs write and camera permissions to be able to edit your profile picture</string>
    <string name="location_error">Must select location</string>
    <string name="edit_skills">Skills</string>
    <string name="select_user">Select user</string>
    <string name="select_category">Select Category</string>
    <string name="select_action">Select an action</string>
    <string name="option_select_a_user">Select a user</string>
    <string name="hint_comment">Add a comment (up to 100 characters)</string>
    <string name="success_recommendation">Recommendation completed</string>
    <string name="hint_keyword_search">Find a tag</string>
    <string name="tab_recommendations">Recommendations</string>
    <string name="tab_badges">Badges</string>
    <string name="tab_gratitudes">Kudos</string>
    <string name="tab_achievements">Achievements</string>
    <string name="contact_list_level">Lvl. %s</string>
    <string name="hint_search">Search Term</string>
    <string name="tab_current_month">Current Month</string>
    <string name="tab_last_month">Last Month</string>
    <string name="tab_all_time">All Time</string>
    <string name="making_recommendation">Making recommendation</string>
    <string name="no_data_found">No data found</string>
    <string name="message_placeholder"></string>
    <string name="fullname_placeholder">Anonymous</string>
    <string name="level_placeholder">No data</string>
    <string name="comment_no_empty_error">Cannot be empty</string>
    <string name="notification_datetime_placeholder">No Date</string>
    <string name="notification_message_placeholder">No Message</string>
    <string name="title_detail">Detail</string>
    <string name="title_date">DateHour</string>
    <string name="title_title_placeholder">No Title</string>
    <string name="title_date_placeholder">No Date</string>
    <string name="event_collaborators">Collaborators: %s</string>
    <string name="event_participants">Participants: %s</string>
    <string name="event_collaborators_no_data">Collaborators: No data</string>
    <string name="event_participants_no_data">Participants: No data</string>
    <string name="event_button_more">More</string>
    <string name="event_title_upcoming">My upcoming events</string>
    <string name="event_title_local">Local events</string>
    <string name="event_title_other">Other locations events</string>
    <string name="tab_event_about">About</string>
    <string name="tab_event_news">News</string>
    <string name="event_dialog_confirm_register">Do you want register this event?</string>
    <string name="event_dialog_confirm_unregister">Do you want unregister this event?</string>
    <string name="event_dialog_result_registered">Event registration confirmed</string>
    <string name="event_dialog_result_unregistered">Event unregistration confirmed</string>
    <string name="about_what">What</string>
    <string name="about_why">Why</string>
    <string name="about_who">Who</string>
    <string name="about_what_message">Belatrix Connect tries to motivated social engagement and teammate recognition through reputation points system based on technical criteria topics about Software Development, also Belatrix Connect wants to be a social connection between people interested in events or talks organized by Belatrix.</string>
    <string name="about_why_message">Because we want to take action and improve our working environment. Because we can. Because we believe in technology and mobile world.</string>
    <string name="about_who_message">Belatrix Connect was created by people really motivated doing geeky stuff and living passionated about mobile technology.</string>
    <string name="support_tittle">Support</string>
    <string name="support_email">mobilelab@belatrixsf.com</string>
    <string name="license_title">License</string>
    <string name="license">The MIT License (MIT)
\nCopyright &#169; 2016 BELATRIX
\nPermission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

\n\nThe above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="collaborators_title">Collaborators</string>
    <string name="action_recommend">Recommend</string>
    <string name="action_search">Search</string>
    <string name="done">DONE</string>
    <string name="ranking_tag">ranking_tag</string>
    <string name="action_give_thanks">Kudos</string>
    <string name="transition_photo">transition_photo</string>
    <string name="transition_splash_logo">transition_splash_logo</string>
    <string name="profile_image_content_desc">Profile image</string>
</resources>