<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single"
            >
                <item
                    android:id="@+id/menu_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_title_home"
                    android:checked="true"/>
                <item
                    android:id="@+id/menu_activities"
                    android:icon="@drawable/ic_activity"
                    android:title="@string/menu_title_activities"/>
                <item
                    android:id="@+id/menu_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/title_settings_activity" />
                <item
                    android:id="@+id/menu_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/menu_title_about"/>
                <item
                    android:id="@+id/menu_help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/menu_title_help"
                    android:visible="true"/>
        </group>
</menu>