<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.belatrixsf.allstars.ui.common.views.AccountSelectionView
        android:id="@+id/account_selection"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:hint_text="@string/select_user"/>

    <com.belatrixsf.allstars.ui.common.views.DataSelectionView
        android:id="@+id/comment_selection"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:hint_text="@string/title_comment_activity"/>

    <com.belatrixsf.allstars.ui.common.views.DataSelectionView
        android:id="@+id/category_selection"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:hint_text="@string/select_category"/>

</LinearLayout>