<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_marginLeft="@dimen/dimen_4_5"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_2_5"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/event_title_textview"
            android:text="@string/event_title_upcoming"/>


        <Button
            android:layout_marginRight="@dimen/dimen_4_5"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:id="@+id/event_more_button"
            android:textStyle="bold"
            android:text="@string/event_button_more"
            android:textColor="@color/colorAccent"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/events_recycler_view"
            android:layout_marginLeft="@dimen/dimen_4_5"
            android:layout_below="@+id/event_title_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_5"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/no_data_textview"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeightSmall"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/no_data_found"
            android:visibility="gone"/>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>