<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <View
                android:id="@+id/belatrix_placeholder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_10_10"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingStart="@dimen/activity_margin"
                android:paddingEnd="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/dimen_10_9"
                android:layout_marginBottom="@dimen/activity_margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/firstName"
                        android:hint="@string/hint_first_name"
                        android:inputType="textCapWords"
                        android:imeOptions="actionNext"
                        style="@style/EditText"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lastName"
                        android:hint="@string/hint_last_name"
                        android:inputType="textCapWords"
                        android:imeOptions="actionNext"
                        style="@style/EditText"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/skypeId"
                        android:hint="@string/hint_skype_id"
                        android:imeOptions="actionNext"
                        style="@style/EditText"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_3_5"
                    android:layout_marginLeft="@dimen/dimen_12"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:text="@string/location_head"
                    android:textSize="@dimen/text_16"
                    android:id="@+id/textView" />

                <RadioGroup
                    android:id="@+id/locationRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_12"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:layout_marginTop="@dimen/dimen_3_5"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Wrapping Imageview in a FrameLayout as a
        workaround for allowing the transition to happen when the view is anchored -->
        <FrameLayout
            android:id="@+id/profile_picture_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@+id/belatrix_placeholder"
            app:layout_anchorGravity="bottom|center" >

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/dimen_15_10"
                android:layout_height="@dimen/dimen_15_10"
                android:contentDescription="@string/profile_image_content_desc"
                android:transitionName="@string/transition_photo"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_shape"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/dimen_6"
                android:padding="@dimen/dimen_2_5">

                <ImageView
                    android:id="@+id/edit_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_add_a_photo"/>

            </LinearLayout>

        </FrameLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.NestedScrollView>